testament/tests/shouldfail/tfile.nim
discard """
errmsg: "undeclared identifier: 'undefined'"
file: "notthisfile.nim"
target: c
"""

echo undefined
